--- a/style.css
+++ b/style.css
@@ -92,17 +92,21 @@ main{
     display: flex;
 }
 
-.verde{
+.chat-left{
+   
+}
+
+.interlo{
     width: 300px;
     background-color: green ;
     height: 50px;
     margin: 5px;
 }
 
-.bianco{
+.utente{
     width: 300px;
     background-color: aqua;
-    height: 50px;
+    /* height: 50px; */
     margin: 5px;
 }
 
