--- a/style.css
+++ b/style.css
@@ -90,19 +90,19 @@ main{
 
 .container-chat{
     display: flex;
-    flex-direction: column;
+    height: 560px;
 }
 
 .chat-left{
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
    
 }
 
 .interlo{
     width: 300px;
     background-color: green ;
-    height: 50px;
+    /* height: 50px; */
     margin: 5px;
 }
 
